<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:divider="@drawable/divide"
              android:showDividers="middle">
    <TextView
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_add"
        android:layout_margin="@dimen/activity_horizontal_margin"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/menu_share"
        android:text="@string/menu_share"
        android:layout_margin="@dimen/activity_horizontal_margin"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/menu_set"
        android:text="@string/menu_set"
        android:layout_margin="@dimen/activity_horizontal_margin"
        />
</LinearLayout>