<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:showDividers="middle|end"
    android:divider="@drawable/divide"
    android:background="@color/colorWhite"
    android:layout_marginTop="@dimen/margin_top"
    android:id="@+id/aqi"
    >
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quality"
            />
        <TextView
            android:id="@+id/aqi_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="良"
            />
    </LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/aqi_num"
                android:text="60"
                android:textSize="18sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aqi_num"
                android:textSize="12sp"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/aqi_pm"
                android:text="60"
                android:textSize="18sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aqi_pm"
                android:textSize="12sp"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>