<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/comfort"
    >
    <!--舒适度建议-->
    <LinearLayout
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:showDividers="middle|end"
        android:divider="@drawable/divide"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggest_comfort"
            />
    </LinearLayout>
    <LinearLayout
        android:padding="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/content_size"
            android:id="@+id/suggest_comfort"
            android:text="舒适度建议的主要内容在这里噢噢噢噢噢噢噢噢"
            />
    </LinearLayout>
    </LinearLayout>
    <!--预防感冒建议-->
    <LinearLayout
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_width="match_parent"
        android:showDividers="middle|end"
        android:divider="@drawable/divide"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggest_flu"
            />
    </LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/content_size"
            android:id="@+id/suggest_flu"
            android:text="预防感冒的建议的主要内容在这里噢噢噢噢噢噢噢噢"
            />
    </LinearLayout>
        </LinearLayout>
    <!--洗车建议-->
    <LinearLayout
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_width="match_parent"
        android:showDividers="middle|end"
        android:divider="@drawable/divide"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggest_car"
            />
    </LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/content_size"
            android:id="@+id/suggest_car"
            android:text="洗车建议的主要内容在这里噢噢噢噢噢噢噢噢"
            />
    </LinearLayout>
        </LinearLayout>

    <!--运动建议-->

    <LinearLayout
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_top"
        android:showDividers="middle|end"
        android:divider="@drawable/divide"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggest_sport"
            />
    </LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/content_size"
            android:id="@+id/suggest_sport"
            android:text="运动建议的主要内容在这里噢噢噢噢噢噢噢噢"
            />
    </LinearLayout>
        </LinearLayout>

</LinearLayout>