<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/comfort"
    >
    <!--舒适度建议-->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        app:cardElevation="5dp"
        >
    <LinearLayout
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:showDividers="middle|end"
        android:divider="@drawable/divide"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggest_comfort"
            />
    </LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_height="wrap_content"
            android:src="@drawable/comfort"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:scaleType="fitStart"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="@dimen/content_size"
            android:id="@+id/suggest_comfort"
            android:text="舒适度建议的主要内容在这里噢噢噢噢噢噢噢噢"
            />
    </LinearLayout>
    </LinearLayout>
    </android.support.v7.widget.CardView>
    <!--预防感冒建议-->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        app:cardElevation="5dp"
        >
    <LinearLayout
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_width="match_parent"
        android:showDividers="middle|end"
        android:divider="@drawable/divide"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggest_flu"
            />
    </LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_height="wrap_content"
            android:src="@drawable/flu"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:scaleType="fitStart"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="@dimen/content_size"
            android:id="@+id/suggest_flu"
            android:text="预防感冒的建议的主要内容在这里噢噢噢噢噢噢噢噢"
            />
    </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        app:cardElevation="5dp"
        >
    <!--洗车建议-->
    <LinearLayout
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_width="match_parent"
        android:showDividers="middle|end"
        android:divider="@drawable/divide"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggest_car"
            />
    </LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_height="wrap_content"
            android:src="@drawable/car"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:scaleType="fitStart"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="@dimen/content_size"
            android:id="@+id/suggest_car"
            android:text="洗车建议的主要内容在这里噢噢噢噢噢噢噢噢"
            />
    </LinearLayout>
        </LinearLayout>
     </android.support.v7.widget.CardView>
    <!--运动建议-->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        app:cardElevation="5dp"
        >
    <LinearLayout
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_top"
        android:showDividers="middle|end"
        android:divider="@drawable/divide"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggest_sport"
            />
    </LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_height="wrap_content"
            android:src="@drawable/sport"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:scaleType="fitStart"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="@dimen/content_size"
            android:id="@+id/suggest_sport"
            android:text="运动建议的主要内容在这里噢噢噢噢噢噢噢噢"
            />
    </LinearLayout>
        </LinearLayout>
</android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        app:cardElevation="5dp"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/source"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        android:textSize="@dimen/normal_size"
        />
    </android.support.v7.widget.CardView>
</LinearLayout>